--- a/H1EmuLauncher/Windows/MessageBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/MessageBoxWindow.xaml
@@ -19,7 +19,8 @@
         Foreground="FloralWhite"
         ContentRendered="MessageBoxContentRendered"
         Loaded="MessageBoxWindowLoaded"
-        Closing="MessageBoxWindowClosing">
+        Closing="MessageBoxWindowClosing"
+        KeyDown="MessageBoxWindowKeyDown">
 
     <!-- Keep window animations -->
     <WindowChrome.WindowChrome>
