--- a/H1EmuLauncher/Language/StringResources.fr-FR.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr-FR.xaml
@@ -50,7 +50,7 @@
     <system:String x:Key="item53">Erreur de lancement du serveur:</system:String>
     <system:String x:Key="item54">Téléchargement en cours...</system:String>
     <system:String x:Key="item55">Utilisation d'une branche d'application: {0}</system:String>
-    <system:String x:Key="item56">Dépôt de traitement {0} - {1}</system:String>
+    <system:String x:Key="item56">Dépôt de traitement: {0}</system:String>
     <system:String x:Key="item57">Pré-attribution de l'espace...</system:String>
     <system:String x:Key="item58">Version du jeu non prise en charge par H1Emu.\n\nN'oubliez pas d'utiliser la version du jeu du 22 décembre 2016.\n\nVous pouvez utiliser ce lanceur pour télécharger la version requise sur la page principale avec votre compte Steam propriétaire de Just Survive, ou bien , recherchez les fichiers du jeu ailleurs.</system:String>
     <system:String x:Key="item59">Nom d'utilisateur...</system:String>
@@ -137,6 +137,7 @@
     <system:String x:Key="item158">Bienvenue sur H1Emu!</system:String>
     <system:String x:Key="item159">AVANT DE COMMENCER, veuillez noter que ce projet ne prend en charge que la version de jeu suivante:</system:String>
     <system:String x:Key="item160">.</system:String>
+    <system:String x:Key="item161">Server IP not valid.</system:String>
     <system:String x:Key="item162">22 décembre 2016</system:String>
     <system:String x:Key="item163">S'il vous plaît</system:String>
     <system:String x:Key="item164">NE PAS</system:String>
@@ -192,4 +193,7 @@
     <system:String x:Key="item215">Erreur lors du calcul du hachage de l'actif:</system:String>
     <system:String x:Key="item216">Veuillez désinstaller tous les fichiers d'actifs personnalisés (.pack) lors de la lecture sur l'un des serveurs principaux, sinon cela pourrait entraîner une interdiction.</system:String>
     <system:String x:Key="item217">RUNNING</system:String>
+    <system:String x:Key="item218">Developer mode</system:String>
+    <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched.</system:String>
+    <system:String x:Key="item220">There was an error pasting your text:</system:String>
 </ResourceDictionary>
