--- a/H1EmuLauncher/Windows/AddServerWindow.xaml
+++ b/H1EmuLauncher/Windows/AddServerWindow.xaml
@@ -141,7 +141,7 @@
                                  Margin="20,20,20,10"
                                  Padding="10,1,10,0"
                                  VerticalContentAlignment="Center"
-                                 Style="{DynamicResource TextBoxPrimaryStyle}">
+                                 Style="{DynamicResource TextBoxStyle}">
 
                             <TextBox.Effect>
 
@@ -175,7 +175,7 @@
                                  Margin="20,10,20,20"
                                  Padding="10,1,10,0"
                                  VerticalContentAlignment="Center"
-                                 Style="{DynamicResource TextBoxPrimaryStyle}">
+                                 Style="{DynamicResource TextBoxStyle}">
 
                             <TextBox.Effect>
 
