--- a/H1EmuLauncher/Windows/SplashWindow.xaml
+++ b/H1EmuLauncher/Windows/SplashWindow.xaml
@@ -18,6 +18,7 @@
         FontSize="16"
         Foreground="FloralWhite"
         ContentRendered="SplashScreenWindowContentRendered"
+        Loaded="SplashScreenWindowLoaded"
         Closing="SplashScreenWindowClosing">
 
     <!-- Keep window animations -->
@@ -61,10 +62,9 @@
             <!-- Divider -->
             <ProgressBar Grid.Row="1"
                          Height="2"
-                         Background="#FFCA1420"
-                         Margin="35,0,35,0"
+                         Margin="15,0,15,0"
                          IsIndeterminate="True"
-                         Style="{DynamicResource ProgressBar}">
+                         Style="{DynamicResource ProgressBarSmall}">
 
                 <!-- Drop shadow effect -->
                 <ProgressBar.Effect>
